# HelpDesk

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/app/: enums.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3338010c9721_init_migration.py  6cea35c451ca_convert_status_and_priority_to_enum.py  8a1ff1b1cd0d_replace_is_admin_flag_with_role.py  8b72a1ed19c1_add_remember_me_column_in_sessions_table.py  c12a46b65e6f_migrate_to_postgresql_add_session_table.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/dependencies/: auth_dep.py  requests_dep.py  session_dep.py  users_dep.py
backend/app/models/: __init__.py  base.py  mixins.py  request.py  user.py
backend/app/repositories/: request_repository.py  session_repository.py  user_repository.py
backend/app/routers/: admin_users.py  auth.py  requests.py  users.py
backend/app/schemas/: auth.py  request.py  user.py
backend/app/services/: request_exceptions.py  request_service.py  user_exceptions.py  user_service.py
backend/app/services/request/: request_service.py
backend/app/services/user/: user_exceptions.py  user_service.py
backend/tests/: conftest.py  test_admin_users_api.py  test_auth_api.py  test_requests_api.py  test_users_api.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: app-router-provider.tsx  error-boundary.tsx  router.tsx
frontend/src/app/router/: admin-guard.tsx  root-layout.tsx  root-redirect.tsx  route-error-page.tsx
frontend/src/components/: app-header.tsx  toast-viewport.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  pagination.tsx  select.tsx  textarea.tsx
frontend/src/features/admin/: constants.ts  types.ts
frontend/src/features/admin/components/: admin-layout.tsx  admin-requests-section.tsx  admin-section-header.tsx  dashboard-card.tsx  edit-request-modal.tsx  user-row.tsx  users-section.tsx
frontend/src/features/admin/hooks/: use-admin-requests.ts  use-admin-users.ts  use-dashboard-counts.ts
frontend/src/features/helpdesk/: constants.ts  types.ts
frontend/src/features/helpdesk/components/: auth-modal.tsx  create-request-modal.tsx  helpdesk-header.tsx  modal.tsx  pagination-controls.tsx  profile-modal.tsx  request-card.tsx  request-filters.tsx  request-list-section.tsx  requests-skeleton.tsx
frontend/src/features/helpdesk/hooks/: use-profile-editor.ts  (+1 more)
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/pages/: admin-dashboard-page.tsx  admin-requests-page.tsx  admin-users-page.tsx  helpdesk-page.tsx
frontend/src/shared/api/: admin-users-api.ts  auth-api.ts  auth-token.ts  http.ts  requests-api.ts  types.ts
frontend/src/stores/: auth-store.test.ts  auth-store.ts  toast-store.ts
(+6 files in other folders)
